5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1575_1330.log
== TEST (2019-03-12 11:32:48) 
-- CODE:
valor = 250/6
round(valor, 2)
print(valor)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:33:15) 
-- CODE:
valor = 250/6
round(valor, 1)
print(valor)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:33:46) 
-- CODE:
valor round(250/6, 1)
print(valor)
-- ERROR:
File "XXXX", line 1
    valor round(250/6, 1)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:34:23) 
-- CODE:
valor = 250/6
round(valor, 2)
print(round(valor, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:34:27) 
-- CODE:
valor = 250/6
print(round(valor, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:34:29) 
-- CODE:
valor = 250/6
print(round(valor, 2))
-- EXECUTION TIME:
0.153261
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
